# Calculatrice

./: CMakeLists.txt
include/: CMakeLists.txt
include/calculator/ast/: ASTNode.h  NumberNode.h  OperatorNode.h
include/calculator/core/: Calculator.h  Token.h
include/calculator/operations/: Addition.h  Division.h  IOperation.h  Multiplication.h  Soustraction.h
include/calculator/parser/: Lexer.h  Parser.h
src/: CMakeLists.txt  main.cpp
src/calculator/ast/: NumberNode.cpp  OperatorNode.cpp
src/calculator/core/: Calculator.cpp  Token.cpp
src/calculator/operations/: Addition.cpp  Division.cpp  Multiplication.cpp  Soustraction.cpp
src/calculator/parser/: Lexer.cpp  Parser.cpp
